# etude

./: COPYING  GNUmakefile  README.org  dune-project  etude.opam
doc/: endofunctors.mld
lib/: dune  endofunctors_intf.ml  list.mli  list_intf.ml  monoid.ml  monoid_intf.ml  option.ml  option.mli  option_intf.ml  result.ml  result_intf.ml  sort.ml  sort.mli  state.ml  traverse.mli
lib/concrete/: config.ml  config.mli  file.ml  marc.ml
src/: .utopinit  dune  endofunctors.ml  endofunctors.mli  endofunctors_intf.ml  list.ml  list.mli  list_intf.ml  monoid.ml  monoid_intf.ml  option.ml  option_intf.ml  parse.ml  printer.ml  printer.mli  result.ml  result_intf.ml  state.ml  state.mli  state_intf.ml  traverse.ml  traverse.mli  traverse_intf.ml
src/concrete/: config.ml  config.mli  file.ml  marc.ml  marc.mli
tests/: dune  monoid_tests.ml
